# ChatGPTBot

./: .readthedocs.yaml  LICENSE  pyproject.toml  readme.md  requirements.txt
backend/: .env_template  chatbot.py  gchat_example.py  railway-blog.toml  railway-gchat.toml  railway.toml  requirements-blog-bot.txt  requirements-gchatbot.txt  requirements-slackbot.txt  requirements.txt  slack_example.py  wilsongpt.py
backend/redis_utils/: add_to_redis.py
chatbot/: __init__.py  chatbot.py  utils.py
chatbot/redis_utils/: create_index.py
docs/: requirements.txt
docs/source/: chatbot.rst  conf.py  examples.md  index.rst  intro.md
examples/fast_api/: blog_api_example.py  nixpacks.toml
examples/google_chat/: gchat_example.py
examples/slack/: nixpacks.toml  slack_example.py
